# MediClear-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  check_models.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  translations.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  main.py  version.py
app/api/v1/: deps.py  router.py
app/api/v1/endpoints/: analyze.py  audio.py  chat.py  health.py  jobs.py  languages.py  metrics.py  sessions.py
app/core/: exceptions.py  logging.py  metrics.py  middleware.py  rate_limit.py  security.py
app/data/: glossary.json
app/i18n/: translations.py
app/models/: analysis.py  languages.py  schemas.py
app/providers/: anthropic_provider.py  base.py  demo.py  gemini.py  openai_provider.py  prompts.py  registry.py  resilient.py
app/services/: ai_service.py  cache.py  document_service.py  idempotency.py  jobs.py  readability.py  session_store.py  streaming.py  terminology.py  tts_service.py
app/static/: index.html
app/static/css/: main.css
app/static/js/: app.js
deploy/: README.md
deploy/helm/mediclear/: Chart.yaml  values.yaml
deploy/helm/mediclear/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  redis.yaml  secret.yaml  service.yaml
deploy/nginx/: mediclear.conf
docs/: api.md  architecture.md  configuration.md  usage.md
tests/: conftest.py  test_advanced_endpoints.py  test_analysis_model.py  test_analyze.py  test_cache_and_documents.py  test_chat.py  test_demo_and_paths.py  test_frontend_toggle.py  test_health.py  test_readability.py  test_security.py  test_session_store.py  test_streaming_extractor.py  test_terminology.py
