[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mediclear-ai"
version = "2.0.0"
description = "Enterprise-grade medical document simplification for hospitals and clinics."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Thijs Nannings" }]
requires-python = ">=3.11"
keywords = ["medical", "ai", "healthcare", "nlp", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.27",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "pypdf>=4.0.0",
    "Pillow>=10.0.0",
    "gTTS>=2.5.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Thijsn04/MediClear-AI"
Repository = "https://github.com/Thijsn04/MediClear-AI"
"Bug Tracker" = "https://github.com/Thijsn04/MediClear-AI/issues"

[project.scripts]
mediclear = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
